Updated product information page Fixed product infor bug with class name fix Updated header from hiding behind other pages.

--- a/styling/landing-page.css
+++ b/styling/landing-page.css
@@ -1,7 +1,6 @@
 .index-page {
   height: 100vh;
   overflow: hidden;
-  background-color: #f2ecec;
 }
 
 .head-container {
