--- a/styling/style.css
+++ b/styling/style.css
@@ -4,6 +4,7 @@ body {
 
 .wrapper {
   width: 100%;
+  background-color: #f2ecec;
 }
 
 .app-title-container {
@@ -13,6 +14,7 @@ body {
   background: #ddddd9;
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 
 h5.app-title {
